fix the vertical spacing issues with the CCSS facet

--- a/docroot/sites/all/themes/custom/SBAC/sass/components/_page-digital-library-resources.scss
+++ b/docroot/sites/all/themes/custom/SBAC/sass/components/_page-digital-library-resources.scss
@@ -534,11 +534,15 @@
               &.facetapi-active {
                 color:black;
                 font-weight:normal;
-                padding-left:15px;
+                padding-left:13px;
                 text-indent: -9999px;
                 display:inline-block !important;
                 background:image-url('filter/icon-check-mark.png') no-repeat 0 0;
               }
+            }
+
+            li {
+              margin-bottom: 0;
             }
           }
         }
